@@ -1,21 +1,23 @@
 ---
-name: Directory-Organize
-version: 0.9.1
+abstract: 'Create and Organize Directories'
 author:
   - 'Mathias Weidner <mathias@weidner.in-bad-schmiedeberg.de>'
-abstract: Create and Organize Directories
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3603'
 license: perl
-resources:
-  license: http://dev.perl.org/licenses/
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Directory-Organize
+provides:
+  Directory::Organize:
+    file: lib/Directory/Organize.pm
+    version: v0.9.2
 requires:
   Getopt::Long: 0
   Term::ReadKey: 0
   version: 0
-provides:
-  Directory::Organize:
-    file: lib/Directory/Organize.pm
-    version: 0.9.1
-generated_by: Module::Build version 0.2808
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+resources:
+  license: http://dev.perl.org/licenses/
+version: v0.9.2
