@@ -1,18 +1,18 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.3603
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'PL_FILES' => {},
-          'INSTALLDIRS' => 'site',
           'NAME' => 'Directory::Organize',
-          'EXE_FILES' => [
-                           'mkdir_heute'
-                         ],
           'VERSION_FROM' => 'lib/Directory/Organize.pm',
           'PREREQ_PM' => {
                            'Getopt::Long' => 0,
-                           'version' => 0,
-                           'Term::ReadKey' => 0
-                         }
+                           'Term::ReadKey' => 0,
+                           'version' => 0
+                         },
+          'INSTALLDIRS' => 'site',
+          'EXE_FILES' => [
+                           'mkdir_heute'
+                         ],
+          'PL_FILES' => {}
         )
 ;
