@@ -1,3 +1,12 @@
+2011-10-31 11:47 CET (mathias) Version 0.9.2
+	- tests for script mkdir_heute
+
+2011-10-15 09:49 CEST (mathias)
+	- mkdir_heute: show text from selection at exit
+
+2011-10-12 11:11 CEST (mathias)
+	- mkdir_heute: exit cleanly (with '.') on EOF in input
+
 2009-07-16 19:18 CEST (mathias) Version 0.9.1
 	- added DIAGNOSTIC to POD for mkdir_heute
 
